# CRGC

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  MakefileOld  README.md  generator  generator-main  generator-main.cpp  generator-main.d  helperFunctions.d  setup.sh
.cache/clangd/index/: circuitCompressor.cpp.FAA4AE9096F7B92A.idx  circuitCompressor.h.F24A09A89C880149.idx  circuitDetails.cpp.EC0E5289071469BE.idx  circuitDetails.h.51148446C462286F.idx  circuitEvaluator.cpp.3844CDAAE56DA74F.idx  circuitEvaluator.h.2B1156C2E0E69455.idx  circuitFlipper.cpp.52DCE76CB764F3EF.idx  circuitFlipper.h.1EC3E1FAE0058AA1.idx  circuitHighSpeedNetIO.h.FF35120AC8E87046.idx  circuitIntegrityBreaker.cpp.958DFA2EA158223E.idx  circuitIntegrityBreaker.h.A56B1E4F0315EFA9.idx  circuitLinker.cpp.53763206355125B3.idx  circuitLinker.h.5D687D4CACC26FC0.idx  circuitNetIO.h.07E75520044E1253.idx  circuitObfuscator.cpp.97460F0CD6620EEB.idx  circuitObfuscator.h.F0C85448D850B0BA.idx  circuitReader.cpp.613ABB99647257BF.idx  circuitReader.h.108B29F13C1FD097.idx  circuitStructs.h.051EF5E4008AE0E0.idx  circuitStructs.h.D05C21DFA85536E6.idx  circuitTransformer.cpp.CD5B5F09226D4FDE.idx  circuitTransformer.h.E536C17CFF1D6FC0.idx  circuitWriter.cpp.BA0526EF15FA5B7A.idx  circuitWriter.h.4E9AE78B7005FBF8.idx  circuitutil.h.08B259913709F585.idx  evaluator-main.cpp.442F48C2C521F424.idx  examplePrograms.cpp.31EE6E37DF99CAE0.idx  examplePrograms.h.A1ABCA880105ECC8.idx  generator-main.cpp.A3A8E83DAD219C58.idx  helperFunctions.cpp.0E12E3A2909A46CA.idx  helperFunctions.h.497B7FA1B90A06BF.idx  leakagePredictor.cpp.7D1558CB575BB423.idx  leakagePredictor.h.AA19801D3715CCCF.idx  partyConfig.h.BD69706FAA6FDFFF.idx  plain_circ_adj.h.263DDF4A71BDF29A.idx  plain_prot_adj.h.6D64FD13841EDE79.idx  randomBoolGenerator.h.B03534D4C5CBC322.idx  vp4.h.1879A6D270F670AA.idx
src/: config.h  evaluator-main.cpp  generator-main.cpp  party.h
src/circuitProcessor/: CMakeLists.txt  circuitCompressor.cpp  circuitDetails.cpp  circuitEvaluator.cpp  circuitFlipper.cpp  circuitIntegrityBreaker.cpp  circuitObfuscator.cpp  circuitReader.cpp  circuitTransformer.cpp  circuitWriter.cpp  helperFunctions.cpp  leakagePredictor.cpp
src/circuitProcessor/include/: circuitCompressor.h  circuitDetails.h  circuitEvaluator.h  circuitFileIO.h  circuitFlipper.h  circuitHighSpeedNetIO.h  circuitIntegrityBreaker.h  circuitNetIO.h  circuitObfuscator.h  circuitReader.h  circuitStructs.h  circuitStructsInheritanceOld.h  circuitStructsOld.h  circuitTransfer.h  circuitTransformer.h  circuitWriter.h  helperFunctions.h  leakagePredictor.h  randomBoolGenerator.h
src/circuits/: sub64.txt
src/programs/: CMakeLists.txt  circuitLinker.cpp  examplePrograms.cpp  mult3.cpp  paperoptm.cpp
src/programs/include/: circuitLinker.h  circuitStructs.h  examplePrograms.h  mult3.h  paperoptm.h  plain_circ_adj.h  plain_prot_adj.h
