add_library(helperFunctions helperFunctions.cpp)
add_library(circuitReader circuitReader.cpp)
add_library(circuitEvaluator circuitEvaluator.cpp)
add_library(circuitFlipper circuitFlipper.cpp)
add_library(circuitObfuscator circuitObfuscator.cpp)
add_library(circuitDetails circuitDetails.cpp)
add_library(circuitIntegrityBreaker circuitIntegrityBreaker.cpp)
add_library(circuitWriter circuitWriter.cpp)
add_library(circuitTransformer circuitTransformer.cpp)



add_library(leakagePredictor leakagePredictor.cpp)